--- a/Brandon-Sitz-Resume.tex
+++ b/Brandon-Sitz-Resume.tex
@@ -182,10 +182,14 @@
     \resumeSubHeadingListStart
       \resumeProjectHeading
           {\textbf{Portfolio} $|$ \emph{React.js, SCSS, GitHub Pages}}{}
+					\resumeItemListStart
+						\resumeItem{Live Application: \href{https://brandon3522.github.io}{brandon3522.github.io}}
+          \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{Flash Carma} $|$ \emph{React.js, Chakra-UI, Firebase, Node.js, GitHub}}{}
           \resumeItemListStart
-						\resumeItem{Web application that allows users to create and study flashcards}
+					\resumeItem{Live Application: \href{https://flash-carma.web.app}{flash-carma.web.app}}
+						\resumeItem{Created a web application that allows users to create and study flashcards}
 						\resumeItem{Login/signup and authentication}
 						\resumeItem{Full database support utilizing Firebase}
           \resumeItemListEnd
@@ -214,7 +218,7 @@
      \textbf{Languages}{: Java, Python, C\#, C/C++, NoSQL (Firebase), React.js, JavaScript, TypeScript, HTML/CSS} \\
      \textbf{Frameworks}{: React, Node.js, JUnit, Material-UI, Chakra-UI, Windows Presentation Foundation (WPF)} \\
      \textbf{Developer Tools}{: Git, GitHub, VS Code, Visual Studio, PyCharm, IntelliJ} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+    %  \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
  \end{itemize}
 
