--- a/Brandon-Sitz-Resume.tex
+++ b/Brandon-Sitz-Resume.tex
@@ -129,7 +129,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Austin Peay State University}{Clarksville, TN}
-      {Bachelor of Science in Computer Science, Concentration in Software Engineering}{Aug. 2019 -- December 2022}
+      {Bachelor of Science in Computer Science, Concentration in Software Engineering}{Aug. 2019 -- Dec. 2022}
 			\resumeItemListStart
 				\resumeItem{Minor: Mathematics}
         \resumeItem{GPA: 4.0}
@@ -145,11 +145,11 @@
 
     \resumeSubheading
       {Delivery Driver}{Clarksville, TN}
-      {Dominos's}{June 2021 -- February 2022}
+      {Domino's}{June 2021 -- Feb. 2022}
       \resumeItemListStart
-        \resumeItem{Delivered high-quality customer service to clients and ensured deliveries were completed in a timely manner}
-        \resumeItem{Assisted with boxing pizzas and cleaning the kitchen area between deliveries}
-        \resumeItem{Communicated verbally with customers and co-workers to process orders over the phone and in person}
+        \resumeItem{Consistently provided high-quality customer service by delivering products in a timely and accurate manner}
+        \resumeItem{Assisted with food preparation, boxing pizzas, and maintaining cleanliness and hygiene in the kitchen area between deliveries}
+        \resumeItem{Delivered exceptional customer service by effectively communicating with customers and co-workers to process orders both in-person and over the phone}
 				\resumeItem{Operated personal motor vehicle in a safe manner and followed all traffic laws and regulations}
       \resumeItemListEnd
       
@@ -168,10 +168,10 @@
       {United States Air Force}{Sep. 2012 -- March 2019}
       \resumeItemListStart
         \resumeItem{Provided critical command and control over 8.5K square miles of territory and \$3.3 billion in United States assets}
-        \resumeItem{Led, managed, supervised, and performed force protection duties to protect personnel and resources}
-        \resumeItem{Responsible for the security and accountability of classified material}
-				\resumeItem{Conducted security and inspections for protection level one resources}
-				\resumeItem{Supervised eight personnel and provided yearly performance evaluations as a Non-Commissioned Officer}
+        \resumeItem{Led and managed a force protection program to safeguard personnel and resources, utilizing threat assessments, access controls, and physical security measures}
+        \resumeItem{Served as a custodian for highly sensitive and classified materials, ensuring their security and accountability in accordance with established policies and procedures}
+				\resumeItem{Conducted regular security assessments and inspections for Protection Level One (PL-1) resources}
+				\resumeItem{Supervised eight personnel as a Non-Commissioned Officer, providing direction and conducting yearly performance evaluations}
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -189,22 +189,23 @@
           {\textbf{Flash Carma} $|$ \emph{React.js, Chakra-UI, Firebase, Node.js, GitHub}}{}
           \resumeItemListStart
 					\resumeItem{Live Application: \href{https://flash-carma.web.app}{flash-carma.web.app}}
-						\resumeItem{Created a web application that allows users to create and study flashcards}
-						\resumeItem{Login/signup and authentication}
+						\resumeItem{Created a web application that enables users to create, manage, and study flashcards}
+						\resumeItem{Constructed a secure login/signup system with authentication}
 						\resumeItem{Full database support utilizing Firebase}
           \resumeItemListEnd
 					\resumeProjectHeading
           {\textbf{Student Registration System} $|$ \emph{C\#, Windows Presentation Foundation (WPF), GitHub}}{}
           \resumeItemListStart
-						\resumeItem{Developed a desktop application that allows students to track their courses}
-						\resumeItem{Full Create Read Update Delete (CRUD) application with login system}
+						\resumeItem{Developed a user-friendly desktop application that enables students to easily track their courses}
+						\resumeItem{Designed and implemented a complete Create Read Update Delete (CRUD) application with a login system}
+						\resumeItem{Implemented data persistence using an XML file, ensuring that user data was stored securely and efficiently}
 						\resumeItem{Utilized Object Oriented Programming (OOP) fundamentals}
           \resumeItemListEnd
 			\resumeProjectHeading
           {\textbf{Event Manager} $|$ \emph{TypeScript, Node.js, GitHub}}{}
           \resumeItemListStart
-						\resumeItem{Created a console application that allows a client to manage organizations, events, and members}
-						\resumeItem{Utilized Object Oriented Programming (OOP) fundamentals}
+						\resumeItem{Created a comprehensive console application that enables clients to efficiently manage organizations, events, and members}
+						\resumeItem{Leveraged Object Oriented Programming (OOP) concepts}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
