Add project link

--- a/Brandon-Sitz-Resume.tex
+++ b/Brandon-Sitz-Resume.tex
@@ -114,6 +114,8 @@
 % 	\href{https://github.com/Brandon3522}{github.com/Brandon3522}
 % \end{center}
 
+
+
 % Without phone number
 \begin{center}
     \textbf{\Huge \scshape Brandon Sitz} \\ \vspace{1pt}
@@ -156,20 +158,22 @@
 				\resumeItem{Constructed a secure login/signup system with authentication}
 				\resumeItem{Full database support utilizing Firebase}
 			\resumeItemListEnd
-			\resumeProjectHeading
+	\resumeProjectHeading
+			{\textbf{Amazon Clone} $|$ \emph{React.js, redux, Firebase, Stripe API, Fake Store API, GitHub}}{}
+			\resumeItemListStart
+				\resumeItem{Live Application: \href{https://clone-f4a00.web.app}{clone-f4a00.web.app}}
+				\resumeItem{Created a fully functional e-commerce website that mimics Amazon's layout and functionality}
+				\resumeItem{Leveraged Redux to manage state and simplify data flow throughout the application}
+				\resumeItem{Harnessed Firebase to handle user authentication, database management, and cloud functions, ensuring data security and efficient data handling}
+			\resumeItemListEnd
+	\resumeProjectHeading
 			{\textbf{Student Registration System} $|$ \emph{C\#, Windows Presentation Foundation (WPF), GitHub}}{}
 			\resumeItemListStart
 				\resumeItem{Developed a user-friendly desktop application that enables students to easily track their courses}
 				\resumeItem{Designed and implemented a complete Create Read Update Delete (CRUD) application with a login system}
 				\resumeItem{Implemented data persistence using an XML file, ensuring that user data was stored securely and efficiently}
-				\resumeItem{Utilized Object Oriented Programming (OOP) fundamentals}
 			\resumeItemListEnd
-	\resumeProjectHeading
-			{\textbf{Event Manager} $|$ \emph{TypeScript, Node.js, GitHub}}{}
-			\resumeItemListStart
-				\resumeItem{Created a comprehensive console application that enables clients to efficiently manage organizations, events, and members}
-				\resumeItem{Leveraged Object Oriented Programming (OOP) concepts}
-			\resumeItemListEnd
+	
 \resumeSubHeadingListEnd
 
 
